# DUCO-FastHash

./: .gitignore  LICENSE  PC_Miner.py  README.md
CPU/: Cargo.toml
CPU/src/: lib.rs
GPU/: Cargo.toml
GPU/src/: kernel.cl  lib.rs
