[package]
name = "ducohasher"
version = "0.1.1"
edition = "2021"

[lib]
name = "ducohasher"
crate-type = ["cdylib"]

[dependencies]
itoa = "1.0.11"
pyo3 = { git = "https://github.com/pyo3/pyo3", features = ["abi3-py37"] }
#sha1_smol = "1.0.1"
#sha1 = { version = "0.10", features = ["asm"] }
ocl = "0.19"
byteorder = "1.4"
